# resume-matching-agent

./: LICENSE  README.md  pyproject.toml
.copilot-tracking/adrs/: v1-txt-only-input-format-draft.md
.copilot-tracking/backlog-sessions/: contoso-hr-resume-matching.state.json
.copilot-tracking/brd-sessions/: contoso-hr-resume-matching.state.json
.copilot-tracking/prd-sessions/: contoso-hr-resume-matching.state.json
.copilot-tracking/research/2026-07-16/: technical-spec-java-vs-python-azure-foundry-research.md
.copilot-tracking/research/subagents/2026-07-16/: architecture-components-research.md  azure-foundry-integration-research.md  java-vs-python-research.md
.github/rulesets/: main-branch-protection.yml
.github/workflows/: apply-main-branch-ruleset.yml  sync-github-issues-from-csv.yml
docs/architecture/: contoso-hr-v1-ascii-architecture.md
docs/backlog/: contoso-hr-resume-matching-backlog.md  github-issue-backlog-v1.csv  github-issue-backlog-v1.md
docs/backlog/scripts/: sync_github_issues.py
docs/brds/: contoso-hr-resume-matching-brd.md
docs/decisions/: 2026-07-15-v1-txt-only-input-format-v01.md
docs/prds/: contoso-hr-resume-matching.md
docs/templates/: brd-template.md
src/resume_matching_agent/: __init__.py  github_ruleset.py
src/resume_matching_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/resume_matching_agent/api/: main.py
tests/: test_api.py  test_github_ruleset.py
web/: app.js  index.html  styles.css
